--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-ui-select": "^0.18.0",
     "angular-cookies": "1.5.8",
     "d3" : "~3.5.0",
-    "c3" : "~0.4.13"
+    "c3" : "~0.4.13",
+    "ng-file-upload": "12.2.12"
   },
   "resolutions": {
     "angular": "1.5.8",
